# docs/swagger.json
@@ -81,6 +81,12 @@
                             "$ref": "#/definitions/types.ErrorResponse"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -92,7 +98,7 @@
         },
         "/api/v1/users/:id": {
             "get": {
-                "description": "Get user information with emails by id",
+                "description": "Get user information with emails by second name",
                 "produces": [
                     "application/json"
                 ],
@@ -113,13 +119,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.UserInfo"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/types.ErrorResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.UserInfo"
+                            }
                         }
                     },
                     "404": {
